<resources>
    <string name="app_name">Chapter2Programs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_grid_view_using_recycler_view">GridViewUsingRecyclerViewActivity</string>
    <string name="title"> Title </string>

    <string-array name="seasonFirst">
        <item>Monsoon is coming</item>
        <item>Lord snow</item>
        <item>Street race</item>
        <item>Princess frog</item>
        <item>Golden Crown</item>
    </string-array>

    <string-array name="seasonSecond">
        <item>Tiger vs Lion</item>
        <item>Lord of Country</item>
        <item>Story of king</item>
        <item>Princess Aana</item>
        <item>Lovely Garden</item>
    </string-array>

    <string-array name="seasonThird">
        <item>Awesome fairy</item>
        <item>Queen of Dholakpur</item>
        <item>Story of Princess</item>
        <item>Barbie movie</item>
        <item>Magical Garden</item>
    </string-array>

    <string name="seasonFirstPart"> Season 1 </string>
    <string name="seasonSecondPart"> Season 2 </string>
    <string name="seasonThirdPart"> Season 3 </string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="form_name"> "Registration form" </string>
    <string name="validation_valid_full_username"> Enter full name </string>
    <string name="validation_valid_mobile_number"> Enter mobile number </string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="skills"> Skills </string>
    <string name="kotlin"> Kotlin </string>
    <string name="swift"> Swift </string>
    <string name="no"> No </string>
    <string name="yes"> Yes </string>
    <string name="custom_toast_message">This is custom toast</string>
    <string name="trainee_verification">Trainee?</string>
    <string name="fees_verify">Fees paid?</string>
    <string name="image_upload">Upload your image</string>
    <string name="submit_button"> Submit </string>
    <string name="switchConstraint">Yes</string>
    <string name="image_button_clicked"> Image Button Clicked</string>
    <string name="submit_button_clicked"> Submit Button Clicked </string>
    <string name="validation_valid_user_name"> Enter Your Name </string>
    <string name="validation_valid_email"> Enter Your Email </string>
    <string name="hint_text_details"> "Feedback Details..." </string>
    <string name="checkbox_text_response"> "Would you like an email response?" </string>
    <string name="button_text_send"> Submit </string>
    <string name="tvInstruction">Enter feedback details to send to the developers </string>
    <string name="ch2">Chapter 2</string>
    <string name="ch3">Chapter 3</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="title_movie_ui">Beauty and the Beast UI</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="title_ui"> Beauty and the Beast </string>
    <string name="movie_date_and_time"> March 2017 PG| 129 min </string>
    <string name="movie_rent"> RENT FROM R29.99</string>
    <string name="movie_price"> BUY FROM R129.99 </string>
    <string name="rating"> 242 ratings </string>
    <string name="similar_icon"> Similar </string>
    <string name="family_icon"> Family </string>
    <string name="tvFirstDes"> 71% </string>
    <string name="title_activity_android_layout"> Hello </string>
    <string name="feedback_submit">Feedback Submitted</string>
    <string name="imageDesc">Movie Image</string>
    <string name="coreText"> "The story and characters you know and love come to spectacular life in the live-action adaption of Disney's animated classic Beauty and the Beast." </string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="firstFragment"> First Fragment </string>
    <string name="secFragment">Second Fragment</string>
    <string name="settings">Settings</string>
    <string name="thirdFragment">Third Fragment</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="first_fragment_label"> first fragment </string>
    <string name="second_fragment_label"> Sec fragment </string>
</resources>