<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLayoutActivity"
    android:background="@color/grey">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:background="@color/black"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/_55sdp"
        android:paddingRight="@dimen/_55sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/btnLinear"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="@+id/btnLinear"
        app:layout_constraintEnd_toEndOf="@+id/btnLinear"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btnConstraint"
        app:layout_constraintEnd_toEndOf="@id/btnConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btnConstraint"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/frame_layout"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        app:layout_constraintStart_toStartOf="@id/btnFrame"
        app:layout_constraintEnd_toEndOf="@id/btnFrame"
        app:layout_constraintTop_toBottomOf="@+id/btnFrame"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRelative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        app:layout_constraintStart_toStartOf="@id/btnTable"
        app:layout_constraintEnd_toEndOf="@id/btnTable"
        app:layout_constraintTop_toBottomOf="@+id/btnTable"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_movie_ui"
        app:layout_constraintStart_toStartOf="@id/btnRelative"
        app:layout_constraintEnd_toEndOf="@id/btnRelative"
        app:layout_constraintTop_toBottomOf="@+id/btnRelative"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/black"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>